# unofficial-davinci-mcp

./: .gitignore  ARCHITECTURE.md  CITATION.cff  NOTICE  README.md  pyproject.toml
bridge/: README.md  __init__.py  resolve_bridge.py
davinci_mcp/: __init__.py  __main__.py  install_bridge.py  mode.py  registry.py  resolve_api.py  server.py  tools_compound.py  tools_interchange.py  tools_live.py
engines/: __init__.py  assemble.py  auto_edit.py  beat_grid.py  captions.py  color_match.py  colorsci.py  dead_air.py  fftools.py  footage_search.py  grade_timeline.py  loudness.py  media.py  music_cut.py  text_edit.py  transcribe.py
examples/: desert-dance-agent-cut.fcpxml
skills/: __init__.py  beat-cutting.md  color-looks.md  dialogue-editing.md  mixing.md  music-editing.md
tests/: _engine_fixtures.py  conftest.py  test_assemble.py  test_auto_edit.py  test_beat_grid.py  test_bridge.py  test_captions.py  test_color_match.py  test_dead_air.py  test_footage_search.py  test_grade_timeline.py  test_loudness.py  test_mode.py  test_music_cut.py  test_server.py  test_skills.py  test_text_edit.py  test_tools_compound.py  test_tools_interchange.py  test_tools_live.py  test_transcribe.py  test_voice_transcribe.py
voice/: README.md  __init__.py  __main__.py  config.json  ptt.py  requirements-voice.txt
