[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "unofficial-davinci-mcp"
version = "1.0.0"
description = "Wasserman's Unofficial DaVinci MCP - agent control for DaVinci Resolve."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Sam Wasserman" }]
keywords = ["davinci-resolve", "mcp", "video-editing", "fcpxml", "edl"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Topic :: Multimedia :: Video :: Non-Linear Editor",
]
dependencies = ["numpy"]

[project.optional-dependencies]
beats = ["librosa"]
voice = ["faster-whisper>=1.0", "sounddevice>=0.4.6", "pynput>=1.7.6", "rumps>=0.4.0"]

[project.scripts]
unofficial-davinci-mcp = "davinci_mcp.server:main"

[project.urls]
Homepage = "https://wassermanproductions.com"

[tool.setuptools.packages.find]
# davinci_mcp is owned here; engines/skills/voice are sibling packages that
# ship alongside it when present.
include = ["davinci_mcp*", "engines*", "skills*", "voice*"]

[tool.pytest.ini_options]
# No xdist/-n: tests spawn a subprocess server and touch shared tmp media.
addopts = "-ra"
testpaths = ["tests"]
